# bootcamp_telegram_bot

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml  setup.cfg
bot/: .env.dist  Dockerfile  Dockerfile.dev  db.py  db_utils.py  main.py  pyproject.toml  test.json  utils.py
bot/common/: cache.py  google_calendar.py  utils.py
bot/crm_mock/: db.py  db_utils.py
bot/crm_mock/crud/: booking.py  user.py
bot/crm_mock/schemas/: user.py
bot/crud/: booking.py  conversation.py  user.py
bot/handlers/: common.py  register.py  user_message.py  user_request.py
bot/models/: __init__.py  config.py  conversation_agent.py  conversation_chain.py  whisper.py
bot/models/langchain/: __init__.py  config.py  conversation_agent.py  conversation_chain.py  prompts.py
bot/models/langchain/tools/: booking_ner.py  sql.py
bot/models/langchain_agents/: __init__.py  conversation_chain.py  prompts.py
bot/models/tools/: sql.py
bot/schemas/: booking.py  conversation_chain.py  user.py
notebooks/: experiments.ipynb  ner_usage.ipynb  new_chains.ipynb
